--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <section id="wrap"></section>
-    <h1>Blake's</h1>
+    <h1>Blake</h1>
   <header>
     <nav>
       <strong class="logo_box"><img src="./img/mainLogo.png" alt="이지스퍼블리싱"></strong>
